--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "~5.0.0"
+    "@vue/cli-service": "~5.0.0",
+    "unplugin-auto-import": "^0.9.3",
+    "unplugin-vue-components": "^0.21.1"
   }
 }
